<resources>
    <string name="app_name">Countdown: The Game</string>
    <string name="app_id">333811983611</string>
    <string name="leaderboard_id">CgkI-8n6xdsJEAIQAQ</string>
    <string name="welcome_to_countdown_the_game">Welcome to Countdown the game!</string>
    <string name="play">Single Player</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Sign In</string>
    <string name="submit_score">Submit Score</string>
    <string name="_333">333</string>
    <string name="show_leaderboard">Show leaderboard</string>
    <string name="scoreTxt">Score</string>
    <string name="submitScoreBtn">Submit Score</string>
    <string name="ScoreAndLeaderboards"><![CDATA[score & leaderboards]]></string>
    <string name="activity_2">activity 2</string>
    <string name="activity_1">Countdown</string>
    <string name="playerSignIn">Sign in</string>
    <string name="button">Button</string>
    <string name="consonant">Consonant</string>
    <string name="vowel">vowel</string>
    <string name="letters_round">Letters Round</string>
    <string name="textview">TextView</string>
    <string name="letter_round">Letter Round</string>
    <string name="letter_one">Letter One</string>
    <string name="score">Score</string>
    <string name="l2">_</string>
    <string name="l3">_</string>
    <string name="l4">_</string>
    <string name="l6">_</string>
    <string name="l7">_</string>
    <string name="l8">_</string>
    <string name="l9">_</string>
    <string name="l5">_</string>
    <string name="l1">_</string>
    <string name="e2">_</string>
    <string name="e3">_</string>
    <string name="e4">_</string>
    <string name="e6">_</string>
    <string name="e7">_</string>
    <string name="e8">_</string>
    <string name="e9">_</string>
    <string name="e5">_</string>
    <string name="e1">_</string>
    <string name="result">Result</string>
    <string name="reset">Reset</string>
    <string name="large_number">Large Number</string>
    <string name="small_number">Small Number</string>
    <string name="numbers_round">Numbers Round</string>
    <string name="operand1">-</string>
    <string name="operand2">-</string>
    <string name="operand3">-</string>
    <string name="operand4">-</string>
    <string name="operand5">-</string>
    <string name="submit">Submit</string>
    <string name="conundrum_round">Conundrum Round</string>
    <string name="mutiply">*</string>
    <string name="divide">/</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="number">Number</string>
    <string name="_0">0</string>
    <string name="total_score">Total Score:</string>
    <string name="answer">Answer</string>
    <string name="next">Next</string>
    <string name="start">Start</string>
    <string name="_9letter">9Letter</string>
    <string name="home">Home</string>
    <string name="time_remaining">Time Remaining:</string>
    <string name="target">TARGET</string>
    <string name="equals">=</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="player_one_begins">Player One Begins!</string>
    <string name="player_1_score">Player 1 Score:</string>
    <string name="player_2_score">Player 2 Score:</string>
    <string name="player_two_begins">Player Two Begins!</string>
    <string name="clockimg">Clock</string>
    <string name="target_">___</string>
    <string name="welcome_to_countdown">Welcome to Countdown</string>
    <string name="leaderboards">Leaderboards</string>
    <string name="multiplayerbtn">MultiplayerBtn</string>
    <string name="singleplayer">SinglePlayer</string>
</resources>
