<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="buckero2reynolb6.student.computing.dcu.ie.countdownthegame.HomeActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scoreTxt"
        android:textSize="20sp"
        android:layout_marginTop="60dp"/>

    <TextView
        android:id="@+id/totalScoreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="47"
        android:textSize="24sp"
        android:layout_marginTop="60dp"/>


    <Button
        android:id="@+id/submitScoreBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/submitScoreBtn" />

    <Button
        android:id="@+id/showLeaderboardBtn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/show_leaderboard" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <TableRow tools:ignore="UselessParent">

            <Button
                android:id="@+id/signInBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/signOutBtn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/sign_out"
                tools:ignore="ButtonStyle" />

        </TableRow>
    </TableLayout>

</LinearLayout>
